--- a/front_end/perf_ui/flameChart.css
+++ b/front_end/perf_ui/flameChart.css
@@ -18,7 +18,7 @@
     display: block;
 }
 
-.flame-chart-canvas[data-keyboard-focus="true"]:focus {
+.flame-chart-canvas:focus {
     border-top: 1px solid var(--accent-color);
     border-bottom: 1px solid var(--accent-color);
 }
