--- a/front_end/accessibility/axBreadcrumbs.css
+++ b/front_end/accessibility/axBreadcrumbs.css
@@ -113,3 +113,20 @@
 .ax-breadcrumbs .ax-node.inspected:focus * {
     color: inherit;
 }
+
+.ax-breadcrumbs-generic-counter {
+  font-weight: bold;
+}
+
+.generic-container-counter {
+    padding-left: 4px;
+    padding-right: 4px;
+    font-weight: 500;
+    font-style: italic;
+}
+.generic-container-counter::before {
+    content: "(" / "";
+}
+.generic-container-counter::after {
+    content: ")" / "";
+}
