--- a/front_end/text_editor/cmdevtools.css
+++ b/front_end/text_editor/cmdevtools.css
@@ -1,4 +1,14 @@
 .CodeMirror {
+    --breakpoint-background-red: #FF4E4226;
+
+  }
+
+:host-context(.-theme-with-dark-background) .CodeMirror,
+.-theme-with-dark-background .CodeMirror {
+    --breakpoint-background-red: #FF4E4233;
+}
+
+.CodeMirror {
     line-height: 1.2em !important;
     background-color: transparent !important;
     color: #222;
@@ -178,8 +188,16 @@
     color: rgba(128, 128, 128, 0.4);
 }
 
+.breakpoint-element {
+    padding-top:  1px;
+}
+
 .breakpoint-element::before {
     content: "\00AD";
+}
+
+.CodeMirror-gutter-background.cm-breakpoint {
+    background-color: var(--breakpoint-background-red);
 }
 
 .cm-breakpoint .breakpoint-element::before {
