Add Serviceworker respondWith Timeline to network panel
Image: https://imgur.com/a/Mqe15Ab

Goes alongside PR: https://chromium-review.googlesource.com/c/chromium/src/+/2142145

Bug: 1066579
Change-Id: Ic46148a21d0fc19ab2013467d5147c4adf958b6d

--- a/front_end/network/networkTimingTable.css
+++ b/front_end/network/networkTimingTable.css
@@ -40,7 +40,7 @@ table.network-timing-table > tr:not(.network-timing-table-header):not(.network-t
 }
 
 .network-timing-table col.labels {
-    width: 156px;
+    width: 166px;
 }
 
 .network-timing-table col.duration {
@@ -107,6 +107,10 @@ table.network-timing-table > tr:not(.network-timing-table-header):not(.network-t
 .network-timing-bar.serviceworker,
 .network-timing-bar.serviceworker-preparation, -theme-preserve {
     background-color: #FF9800;
+}
+
+.network-timing-bar.serviceworker-respondwith, -theme-preserve {
+    background-color: #A8A3FF;
 }
 
 .network-timing-bar.ssl, -theme-preserve {
