Improve contrast for `null` and `undefined` values
Any `null` and `undefined` values logged to the Console are styled
in grey. This patch tweaks the shade of grey used in order to bring
the contrast to an acceptable level, for the light theme and the dark
theme alike.

Bug: chromium:1066415
Change-Id: I5e410013dbf6e87a7018e68c487f9e5d44993f6c
Fixed: chromium:1083126

--- a/front_end/object_ui/objectValue.css
+++ b/front_end/object_ui/objectValue.css
@@ -75,7 +75,14 @@
 
 .object-value-null,
 .object-value-undefined {
-    color: rgb(128, 128, 128);
+    color: rgb(94 94 94);
+}
+
+.-theme-with-dark-background .object-value-null,
+:host-context(.-theme-with-dark-background) .object-value-null,
+.-theme-with-dark-background .object-value-undefined,
+:host-context(.-theme-with-dark-background) .object-value-undefined {
+    color: rgb(161 161 161);
 }
 
 .object-value-calculate-value-button:hover {
