Uncover "Page Colors" option
This fixes an issue where not all options for "Color Palettes" were
shown when the overall color picker height was too small. Now when
opening the "Color Palettes" panel, it is translated by 100% so that
it is fully shown.

Fixed: chromium:832581
Change-Id: Ie40be9e81a187a60cf2e963549e853fedb2ce7ae

--- a/front_end/color_picker/spectrum.css
+++ b/front_end/color_picker/spectrum.css
@@ -458,7 +458,6 @@
 
 .palette-panel {
     width: 100%;
-    height: 100%;
     position: absolute;
     top: 100%;
     display: flex;
@@ -471,7 +470,7 @@
 }
 
 .palette-panel-showing > .palette-panel {
-    transform: translateY(calc(-100% + 104px));
+    transform: translateY(-100%);
     transition-delay: 0s;
     visibility: visible;
 }
