--- a/front_end/color_picker/spectrum.css
+++ b/front_end/color_picker/spectrum.css
@@ -458,23 +458,22 @@
 }
 
 .palette-panel {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  z-index: 14;
-  transition: transform 200ms cubic-bezier(0, 0, 0.2, 1), visibility 0s 200ms;
-  border-top: var(--divider-border);
-  visibility: hidden;
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    z-index: 14;
+    transition: transform 200ms cubic-bezier(0, 0, 0.2, 1), visibility 0s 200ms;
+    border-top: var(--divider-border);
+    visibility: hidden;
 }
 
 .palette-panel-showing > .palette-panel {
-  transform: translateY(calc(-100% + 104px));
-  transition-delay: 0s;
-  visibility: visible;
+    transform: translateY(-100%);
+    transition-delay: 0s;
+    visibility: visible;
 }
 
 .palette-panel > div.toolbar {
