WIP: type profiling prototype
Change-Id: I1e0a39e12c25795b7a21c5b5ff94af7add8d1697

--- a/front_end/text_editor/cmdevtools.css
+++ b/front_end/text_editor/cmdevtools.css
@@ -279,6 +279,13 @@
   content: url(Images/logpoint-disabled.svg);
 }
 
+.cm-type-bookmark {
+  margin: 0 2px;
+  padding: 0 2px;
+  border-radius: 5px;
+  border: 1px solid;
+}
+
 .cm-execution-line-tail + .CodeMirror-widget {
   background-color: #abbffe;
 }
