Add getSurveyAPIKey to InspectorFrontendHost
This new method is used to get the API key to use for in-product
surveys. The key itself is in the chrome-internal repository and is
piped through in this chrome CL: http://crrev.com/c/2362182

Bug: 1112738
Change-Id: Ib44333bf7ca8ac226e7d4e31d6dd51f868144ab3

--- a/front_end/issues/issuesTree.css
+++ b/front_end/issues/issuesTree.css
@@ -378,6 +378,16 @@ ul > li.plain-enum::before {
   background-color: var(--issue-warning);
 }
 
+.pad-icon-to-large {
+  margin: 0 7px;
+}
+
+.pending-link {
+  opacity: 75%;
+  pointer-events: none;
+  cursor: default;
+}
+
 .affected-resources > .parent {
   margin-top: 0;
   padding: 2px 5px 0 5px;
