[surveys] Add the UI for showing a survey link in IssueView
Bug: 1112738
Change-Id: Iffc2f7fcf56234db12f4a68feff2561a5b9cdd41

--- a/front_end/issues/issuesTree.css
+++ b/front_end/issues/issuesTree.css
@@ -381,6 +381,18 @@ ul > li.plain-enum::before {
   background-color: var(--issue-warning);
 }
 
+.pending-link {
+  opacity: 75%;
+  pointer-events: none;
+  cursor: default;
+}
+
+.disabled-link {
+  pointer-events: none;
+  cursor: default;
+  text-decoration: none;
+}
+
 .affected-resources > .parent {
   margin-top: 0;
   padding: 2px 5px 0 5px;
