Add modifiers to the button
We need to be able to
configure specific aspects of the button.
For those small stylistic changes, we're
going to use `Modifier`s

Bug: 1306756
Change-Id: If73e7822bb5d19a7261bd565d0b55ad12f46cd26

--- a/front_end/ui/components/buttons/button.css
+++ b/front_end/ui/components/buttons/button.css
@@ -40,9 +40,17 @@ button {
   width: 100%;
 }
 
+button.no-right-border-radius {
+  border-radius: 4px 0 0 4px;
+}
+
 button.small {
   height: 18px;
   border-radius: 2px;
+}
+
+button.small.no-right-border-radius {
+  border-radius: 2px 0 0 2px;
 }
 
 button:focus-visible {
@@ -59,6 +67,10 @@ button.round {
   overflow: hidden;
   padding: 0;
   white-space: nowrap;
+}
+
+button.toolbar.no-right-border-radius {
+  border-radius: 2px 0 0 2px;
 }
 
 button.round {
