--- a/front_end/panels/elements/components/computedStyleTrace.css
+++ b/front_end/panels/elements/components/computedStyleTrace.css
@@ -12,6 +12,8 @@
 
 .computed-style-trace {
   margin-left: 16px;
+  font-family: var(--monospace-font-family);
+  font-size: var(--monospace-font-size);
 }
 
 .computed-style-trace:hover {
@@ -38,6 +40,13 @@
   display: inline-block;
 }
 
+.devtools-link {
+  color: var(--color-text-primary);
+  text-decoration-color: rgb(153 153 153);
+  text-decoration-line: underline;
+  cursor: pointer;
+}
+
 .trace-value {
   margin-left: 16px;
 }
@@ -53,7 +62,7 @@
   padding-left: 2em;
 }
 
-::slotted([slot="trace-link"]) {
+.trace-link {
   user-select: none;
   float: right;
   padding-left: 1em;
