--- a/front_end/panels/elements/computedStyleSidebarPane.css
+++ b/front_end/panels/elements/computedStyleSidebarPane.css
@@ -42,3 +42,17 @@
     border: 1px solid ButtonText;
   }
 }
+
+.group-title > h1 {
+  margin: 1px 0 0;
+  padding: 1em 0;
+  width: 100%;
+  cursor: text;
+  color: var(--color-text-secondary);
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.group-title ~ .group-title > h1 {
+  border-top: 1px solid var(--color-details-hairline);
+}
