added slot field
DISABLE_THIRD_PARTY_CHECK=need updated cdp for slots


added slot

Bug: none
Change-Id: I0913441c86ed5c2f89dbb8cac274f771896c7e73

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -699,6 +699,13 @@ input.custom-search-input::-webkit-search-cancel-button {
   from { transform: rotate(0); }
   to { transform: rotate(360deg); }
 }
+
+.slot-link {
+  display: inline-block;
+  margin-left: 3px;
+  color: var(--color-text-secondary);
+}
+
 /** Adorner */
 .adorner-container {
   display: inline-block;
