--- a/front_end/panels/network/components/RequestHeadersView.css
+++ b/front_end/panels/network/components/RequestHeadersView.css
@@ -23,10 +23,23 @@
   background-color: var(--legacy-focus-bg-color);
 }
 
+details[open] .header-count {
+  display: none;
+}
+
+details summary devtools-button {
+  display: none;
+}
+
+details[open] summary devtools-button {
+  display: inline-flex;
+}
+
 .row {
   display: flex;
   line-height: 20px;
   padding-left: 25px;
+  user-select: text;
 }
 
 .row:first-of-type {
@@ -46,7 +59,6 @@
 
 .header-value {
   word-break: break-all;
-  user-select: text;
 }
 
 .green-circle::before,
@@ -75,4 +87,10 @@
 
 .status-with-comment {
   color: var(--color-text-secondary);
+}
+
+.raw-headers {
+  font-family: var(--source-code-font-family);
+  font-size: var(--source-code-font-size);
+  white-space: pre-wrap;
 }
