mouseevent on container
Change-Id: I18e06044fe18445df79abaa80319f0854ae963dc

--- a/front_end/ui/legacy/components/perf_ui/overviewGrid.css
+++ b/front_end/ui/legacy/components/perf_ui/overviewGrid.css
@@ -96,6 +96,8 @@
   display: flex;
   position: absolute;
   top: 15px;
+  color: brown;
+  background-color: brown;
   justify-content: center;
   z-index: 600;
   left: 0;
