--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -200,14 +200,6 @@ details[open] {
   transition: height var(--sys-motion-duration-short4) var(--sys-motion-easing-emphasized);
 }
 
-.refine-container {
-  display: flex;
-  flex-direction: row;
-  margin-top: 20px;
-  margin-bottom: 12px;
-  gap: 8px;
-}
-
 h2 {
   display: block;
   font-size: inherit;
@@ -227,4 +219,8 @@ devtools-icon[name="spark"] {
 devtools-icon[name="dog-paw"] {
   width: 16px;
   height: 16px;
+}
+
+.consent-button {
+  margin-top: 8px;
 }
