--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -122,17 +122,17 @@ footer {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-top: 8px;
-}
-
-footer > div:nth-child(1) {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
+  margin-top: 10px;
 }
 
 footer > .filler {
   flex: 1;
+}
+
+footer .rating {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 textarea {
@@ -198,14 +198,6 @@ details {
 details[open] {
   height: calc(var(--list-height) + var(--collapsed-height) + /* margin */ 8px);
   transition: height var(--sys-motion-duration-short4) var(--sys-motion-easing-emphasized);
-}
-
-.refine-container {
-  display: flex;
-  flex-direction: row;
-  margin-top: 20px;
-  margin-bottom: 12px;
-  gap: 8px;
 }
 
 h2 {
