Change the css of the "heaviest stack" to make it visible in super narrow view
Fixed: 1500553
Bug: 1500553
Change-Id: Ib13e3a8d07f9e23bb568999d47a521fa034275b1

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -467,7 +467,7 @@
 
 .timeline-details-view-body > div {
   overflow-y: hidden;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 .timeline-landing-page > div {
