--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -96,6 +96,14 @@ select.toolbar-item:disabled + .toolbar-dropdown-arrow {
   border-radius: 0;
 }
 
+.toolbar-item-search {
+  min-width: 5.2em;
+  max-width: 300px;
+  flex: 1 1 auto;
+  justify-content: start;
+  overflow: revert;
+}
+
 .toolbar-text {
   margin: 0 5px;
   flex: none;
@@ -226,6 +234,18 @@ it. */
   font-weight: bold;
 }
 
+.toolbar-button.dark-text .toolbar-text {
+  color: var(--sys-color-on-surface) !important;  /* stylelint-disable-line declaration-no-important */
+}
+
+.toolbar-button.toolbar-state-on .toolbar-text {
+  color: var(--sys-color-primary);
+}
+
+.toolbar-button.toolbar-state-on:enabled:active .toolbar-text {
+  color: var(--sys-color-primary-bright);
+}
+
 .toolbar-blue-on-hover .toolbar-button:not(.toolbar-state-on):enabled:hover:not(:active) {
   background-color: var(--sys-color-state-hover-on-subtle);
 }
@@ -236,14 +256,6 @@ it. */
 
 .toolbar-toggled-gray:not(.toolbar-render-as-links) .toolbar-button:not(.toolbar-has-glyph):not(.toolbar-has-dropdown):not(.largeicon-menu):hover {
   background-color: var(--sys-color-state-hover-on-subtle);
-}
-
-.toolbar-button.dark-text .toolbar-text {
-  color: var(--sys-color-on-surface) !important;  /* stylelint-disable-line declaration-no-important */
-}
-
-.toolbar-button.toolbar-state-on .toolbar-text {
-  color: var(--sys-color-primary);
 }
 
 :not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-glyph {
@@ -263,7 +275,7 @@ it. */
 }
 
 .toolbar-button.toolbar-state-on:enabled:hover:not(:active) .toolbar-text {
-  color: var(--sys-color-on-surface);
+  color: var(--sys-color-primary);
 }
 
 .toolbar-toggled-gray .toolbar-button.toolbar-state-on {
@@ -416,7 +428,7 @@ input[is="history-input"] {
   border: 1px solid var(--sys-color-neutral-outline);
   border-radius: 4px;
   line-height: 16px;
-  padding: 1px;
+  padding: 1px 1px 1px 3px;
   color: var(--sys-color-on-surface);
 }
 
