[DevToolsGM3Fonts] Update default and monospace fonts for Windows
Bug: chromium:1523538
Change-Id: Ife5232689fc137dce88c1892eee9c999e226e083

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -107,7 +107,7 @@ body {
 }
 
 .platform-windows {
-  --default-font-family: "Segoe UI", tahoma, sans-serif;
+  --default-font-family: system-ui, sans-serif;
 }
 
 :focus {
@@ -126,9 +126,9 @@ body {
 .platform-windows,
 :host-context(.platform-windows) {
   --monospace-font-size: 12px;
-  --monospace-font-family: consolas, lucida console, courier new, monospace;
+  --monospace-font-family: monospace;
   --source-code-font-size: 12px;
-  --source-code-font-family: consolas, lucida console, courier new, monospace;
+  --source-code-font-family: monospace;
 }
 
 .platform-linux,
