Fix overflow behavior for various panes in application panel.
Fixed: chromium:1523512
Change-Id: I0e69b14adccf261dea35ef6e84e2b077f2f9f687

--- a/front_end/panels/application/reportingApiReportsView.css
+++ b/front_end/panels/application/reportingApiReportsView.css
@@ -10,8 +10,5 @@
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   overflow: auto;
-
-  & div {
-    width: 100%;
-  }
+  text-align: center;
 }
