--- a/front_end/ui/legacy/components/perf_ui/flameChart.css
+++ b/front_end/ui/legacy/components/perf_ui/flameChart.css
@@ -46,6 +46,13 @@
 .flame-chart-selected-element {
   position: absolute;
   pointer-events: none;
+  outline: 2px solid var(--sys-color-primary-bright);
+  background-color: var(--sys-color-state-ripple-primary);
+}
+
+.flame-chart-all-selected-element {
+  position: absolute;
+  pointer-events: none;
   outline: 2px solid var(--sys-color-primary);
   background-color: var(--sys-color-state-ripple-primary);
 }
