Minor refactoring in console insights
- remove update(), start rendering in the connected callback instead
- refactor the use of the icon component
- remove actionName setter

Bug: b/299423255
Change-Id: Ia4e87aad57ba27a957f2eea2d1f5afee18d807e1

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -158,6 +158,12 @@ textarea {
 .link {
   color: var(--sys-color-primary);
   text-decoration-line: underline;
+
+  devtools-icon {
+    color: var(--sys-color-primary);
+    width: 14px;
+    height: 14px;
+  }
 }
 
 .loader {
