--- a/front_end/panels/profiler/heapProfiler.css
+++ b/front_end/panels/profiler/heapProfiler.css
@@ -153,7 +153,7 @@
   color: var(--sys-color-token-subtle);
 }
 
-.heap-snapshot-view tr:not(.selected) .cycled-ancessor-node {
+.heap-snapshot-view tr:not(.selected) .cycled-ancestor-node {
   opacity: 60%;
 }
 
@@ -215,7 +215,7 @@
 }
 
 @media (forced-colors: active) {
-  .cycled-ancessor-node {
+  .cycled-ancestor-node {
     opacity: 100%;
   }
 
