Update strings in insights
This also adds a fine print to the insight footer, which usese 12px font
size and a lighter gray color.

R=alexrudenko@chromium.org

Bug: b/299423255
Change-Id: Ic492172272c000e2b701553424a69bab04bbe1d3

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -117,12 +117,12 @@ devtools-markdown-view {
 footer {
   display: flex;
   flex-direction: row;
+  align-items: flex-end;
   color: var(--sys-color-on-surface);
-  font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-top: 10px;
+  margin-top: 16px;
 }
 
 footer > .filler {
@@ -149,10 +149,13 @@ textarea {
   margin-bottom: 16px;
 }
 
-.dogfood-feedback {
+.disclaimer {
   display: flex;
   gap: 2px;
-  align-items: center;
+  color: var(--sys-color-on-surface-subtle);
+  font-size: 12px;
+  align-items: flex-start;
+  flex-direction: column;
 }
 
 .link {
