--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -451,6 +451,27 @@ span[is="dt-icon-label"] {
   z-index: 500;
 }
 
+/* stylelint-disable */
+.spritesheet-wand.icon-mask {
+  -webkit-mask-image: var(--image-file-wand);
+  background:
+    linear-gradient(
+      90deg,
+      rgb(255 0 0 / 100%) 0%,
+      rgb(255 154 0 / 100%) 10%,
+      rgb(208 222 33 / 100%) 20%,
+      rgb(79 220       74 / 100%) 30%,
+      rgb(63 218 216 / 100%) 40%,
+      rgb(47 201 226 / 100%) 50%,
+      rgb(28 127 238 / 100%) 60%,
+      rgb(95 21 242 / 100%) 70%,
+      rgb(186 12       248 / 100%) 80%,
+      rgb(251 7 217 / 100%) 90%,
+      rgb(255 0 0 / 100%) 100%
+    );
+}
+/* stylelint-enable */
+
 .dot::before {
   content: var(--image-file-empty);
   width: 6px;
