Cool Mystery CL 😎
Bug: none
Change-Id: I2a931e9013738e1d1f5d439ff5b1d999174b2694

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -51,6 +51,12 @@
   overflow: hidden;
 }
 
+devtools-adorner.fix-perf-icon {
+  --override-adorner-text-color: transparent;
+  --override-adorner-border-color: transparent;
+  --override-adorner-background-color: transparent;
+}
+
 .toolbar-item,
 .toolbar-item .devtools-link {
   color: var(--icon-default);
